--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.0.5",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
+    "react-parallax-tilt": "^1.7.274"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
